# mt3620-m4-samples

SPI_SDCard_RTApp_MT3620_BareMetal/: CMakeLists.txt  SD.c  SD.h  TextFile1.txt  TextFile2.txt  app_manifest.json  fatfs_sd.c  fatfs_sd.h  ffconf.h  general_sdcard.c  general_sdcard.h  main.c  user_diskio.c
SPI_SDCard_RTApp_MT3620_BareMetal/FatFs/: diskio.c  ffconf.h
